test/modules/shadowing/issue-19167-1-x.good
issue-19167-1-x.chpl:3: error: symbol x is multiply defined
issue-19167-1-x.chpl:7: note: also defined here
